--- a/notebooks/cheap_optical_flow_eval.ipynb
+++ b/notebooks/cheap_optical_flow_eval.ipynb
@@ -25,7 +25,7 @@
    "outputs": [],
    "source": [
     "# parameters\n",
-    "SHOW_DEMO_OUTPUT = True\n",
+    "SHOW_DEMO_OUTPUT = False\n",
     "DEMO_FPS = []\n",
     "\n",
     "RUN_FULL_ANALYSIS = True\n",
@@ -38,28 +38,85 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Data Model & Utility Code\n",
+    "## Setup\n",
     "\n",
     "!pip3 install pypng scikit-image\n",
     "\n",
-    "import attr\n",
     "import copy\n",
-    "import cv2\n",
     "import imageio\n",
     "import IPython.display\n",
     "import math\n",
     "import os\n",
     "import PIL.Image\n",
     "import six\n",
+    "import sys\n",
+    "import tempfile\n",
     "\n",
-    "from oarphpy import plotting as op_plt\n",
+    "\n",
+    "## General Notebook Utilities\n",
+    "    \n",
+    "def imshow(x):\n",
+    "    IPython.display.display(PIL.Image.fromarray(x))\n",
+    "\n",
+    "def show_html(x):\n",
+    "    from IPython.core.display import display, HTML\n",
+    "    display(HTML(x))\n",
+    "\n",
+    "\n",
+    "## Create a random temporary directory for analysis library (for Spark-enabled full analysis mode)\n",
+    "old_cwd = os.getcwd()\n",
+    "tempdir = tempfile.TemporaryDirectory(suffix='_cheap_optical_flow_eval_analysis')\n",
+    "ALIB_SRC_DIR = tempdir.name\n",
+    "print(\"Putting data model assets in %s\" % ALIB_SRC_DIR)\n",
+    "os.chdir(ALIB_SRC_DIR)\n",
+    "!mkdir -p cheap_optical_flow_eval_analysis\n",
+    "!touch cheap_optical_flow_eval_analysis/__init__.py\n",
+    "\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "sys.path.append(ALIB_SRC_DIR)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile cheap_optical_flow_eval_analysis/ofp.py\n",
+    "\n",
+    "## Data Model & Utility Code\n",
+    "\n",
+    "import attr\n",
+    "import cv2\n",
+    "import imageio\n",
+    "import math\n",
+    "import os\n",
+    "import PIL.Image\n",
+    "import six\n",
+    "\n",
     "import numpy as np\n",
     "\n",
+    "from oarphpy import plotting as op_plt\n",
+    "img_to_data_uri = lambda x: op_plt.img_to_data_uri(x, format='png')\n",
     "\n",
     "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
     "class OpticalFlowPair(object):\n",
     "    \"\"\"A flyweight for a pair of images with an optical flow field.\n",
     "    Supports lazy-loading of large data attributes.\"\"\"\n",
+    "    \n",
+    "#     slots = (\n",
+    "#         'dataset',\n",
+    "#         'id1',\n",
+    "#         'id2',\n",
+    "#         'img1',\n",
+    "#         'img2',\n",
+    "#         'flow',\n",
+    "#     )\n",
+    "    \n",
+    "#     def __init__(self, **kwargs):\n",
+    "#         for k in self.slots:\n",
+    "#             setattr(self, k, kwargs.get(k))\n",
     "    \n",
     "    dataset = attr.ib(type=str, default='')\n",
     "    \"\"\"To which dataset does this pair belong?\"\"\"\n",
@@ -120,48 +177,6 @@
     "                fviz=img_to_data_uri(fviz))\n",
     "        return html\n",
     "\n",
-    "\n",
-    "## General Utilities\n",
-    "    \n",
-    "def imshow(x):\n",
-    "    IPython.display.display(PIL.Image.fromarray(x))\n",
-    "\n",
-    "def show_html(x):\n",
-    "    from IPython.core.display import display, HTML\n",
-    "    display(HTML(x))\n",
-    "    \n",
-    "def load_image(x):\n",
-    "    if isinstance(x, (np.ndarray, np.generic)):\n",
-    "        return x\n",
-    "    if isinstance(x, six.string_types):\n",
-    "        return imageio.imread(x)\n",
-    "    else:\n",
-    "        raise ValueError(\"Can't handle %s\" % (x,))\n",
-    "\n",
-    "img_to_data_uri = lambda x: op_plt.img_to_data_uri(x, format='png')\n",
-    "# # TODO correct oarphpy img uri to be png or jpeg   data_url = 'data:image/png;base64,{}'.format(parse.quote(data)) \n",
-    "# def img_to_data_uri(img, format='png', jpeg_quality=75):\n",
-    "#     \"\"\"Given a numpy array `img`, return a `data:` URI suitable for use in \n",
-    "#     an HTML image tag.\"\"\"\n",
-    "\n",
-    "#     from io import BytesIO\n",
-    "#     out = BytesIO()\n",
-    "\n",
-    "#     import imageio\n",
-    "#     kwargs = dict(format=format)\n",
-    "#     if format == 'jpg':\n",
-    "#         kwargs.update(quality=jpeg_quality)\n",
-    "#     imageio.imwrite(out, img, **kwargs)\n",
-    "\n",
-    "#     from base64 import b64encode\n",
-    "#     data = b64encode(out.getvalue()).decode('ascii')\n",
-    "\n",
-    "#     from six.moves.urllib import parse\n",
-    "#     data_url = 'data:image/png;base64,{}'.format(parse.quote(data))\n",
-    "\n",
-    "#     return data_url\n",
-    "\n",
-    "\n",
     "def draw_flow(img, flow, step=8):\n",
     "    \"\"\"Based upon OpenCV sample: https://github.com/opencv/opencv/blob/master/samples/python/opt_flow.py\"\"\"\n",
     "    h, w = img.shape[:2]\n",
@@ -174,6 +189,15 @@
     "    for (x1, y1), (_x2, _y2) in lines:\n",
     "        cv2.circle(vis, (x1, y1), 1, (0, 255, 0), -1)\n",
     "    return vis\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cheap_optical_flow_eval_analysis.ofp import *"
    ]
   },
   {
@@ -212,13 +236,24 @@
     "        'expected_out': 'other-data/RubberWhale/frame11.png',\n",
     "        'flow_gt': 'other-gt-flow/RubberWhale/flow10.flo',\n",
     "    },\n",
-    "]\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile cheap_optical_flow_eval_analysis/midd.py\n",
     "\n",
     "# Written as a functor to make it easier to pickle\n",
     "class MiddReadFlow(object):\n",
-    "    __slots__ = ['path']\n",
+    "    __slots__ = ('path',)\n",
     "    def __init__(self, path): self.path = path\n",
     "    def __call__(self):\n",
+    "        import os\n",
+    "        import numpy as np\n",
     "        # Based upon: https://github.com/Johswald/flow-code-python/blob/master/readFlowFile.py\n",
     "        # compute colored image to visualize optical flow file .flo\n",
     "        # Author: Johannes Oswald, Technical University Munich\n",
@@ -246,9 +281,24 @@
     "        invalid = (flow >= 1666)\n",
     "        flow[invalid] = 0\n",
     "\n",
-    "        return flow\n",
-    "\n",
-    "\n",
+    "        return flow\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cheap_optical_flow_eval_analysis.midd import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for i, scene in enumerate(MIDD_SCENES):\n",
     "    p = OpticalFlowPair(\n",
     "            dataset=\"Middlebury Optical Flow\",\n",
@@ -257,12 +307,13 @@
     "            id2=scene['expected_out'],\n",
     "            img2='file://' + os.path.join(MIDD_DATA_ROOT, scene['expected_out']),\n",
     "            flow=MiddReadFlow(os.path.join(MIDD_DATA_ROOT, scene['flow_gt'])))\n",
+    "    \n",
     "    if RUN_FULL_ANALYSIS:\n",
     "        ALL_FPS.append(copy.deepcopy(p))\n",
     "    \n",
     "    if SHOW_DEMO_OUTPUT:\n",
     "        show_html(p.to_html() + \"<br/><br/><br/>\")\n",
-    "        DEMO_FPS.append(p)\n"
+    "        DEMO_FPS.append(p)"
    ]
   },
   {
@@ -307,17 +358,28 @@
     "        \"expected_out\": \"train/seq337/color/000350.jpg\",\n",
     "        \"flow_gt\": \"train/seq337/optical_flow/adult_000050_000350.oflow\",\n",
     "    },\n",
-    "]\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile cheap_optical_flow_eval_analysis/deepdeform.py\n",
     "\n",
     "# Written as a functor to make it easier to pickle\n",
     "class DDLoadFLow(object):\n",
-    "    __slots__ = ['path']\n",
+    "    __slots__ = ('path',)\n",
     "    def __init__(self, path): self.path = path\n",
     "    def __call__(self):\n",
     "        path = self.path\n",
     "        # Based upon https://github.com/AljazBozic/DeepDeform/blob/master/utils.py#L1\n",
     "        import shutil\n",
     "        import struct\n",
+    "        import os\n",
+    "        import numpy as np\n",
     "\n",
     "        # Flow is stored row-wise in order [channels, height, width].\n",
     "        assert os.path.isfile(path)\n",
@@ -336,8 +398,24 @@
     "        flow_gt = np.moveaxis(flow_gt, 0, -1) # (h, w, 2)\n",
     "        invalid_flow = flow_gt == -np.Inf\n",
     "        flow_gt[invalid_flow] = 0.0\n",
-    "        return flow_gt\n",
-    "\n",
+    "        return flow_gt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cheap_optical_flow_eval_analysis.deepdeform import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def dd_create_fp(info):\n",
     "     return OpticalFlowPair(\n",
     "                dataset=\"DeepDeform Semi-Synthetic Optical Flow\",\n",
@@ -435,16 +513,26 @@
     "    for fname in KITTI_SF15_ALL_FLOW_OCC\n",
     "]\n",
     "print(\"Found %s KITTI SceneFlow 2015 scenes\" % len(KITTI_SF15_ALL_SCENES))\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile cheap_optical_flow_eval_analysis/kittisf15.py\n",
     "\n",
     "# Written as a functor to make it easier to pickle\n",
     "class KITTISF15LoadFlowFromPng(object):\n",
-    "    __slots__ = ['path']\n",
+    "    __slots__ = ('path',)\n",
     "    def __init__(self, path): self.path = path\n",
     "    def __call__(self):\n",
     "        path = self.path\n",
     "        # Based upon https://github.com/liruoteng/OpticalFlowToolkit/blob/master/lib/flowlib.py#L559\n",
     "        import png\n",
+    "        import numpy as np\n",
     "        flow_object = png.Reader(filename=path)\n",
     "        flow_direct = flow_object.asDirect()\n",
     "        flow_data = list(flow_direct[2])\n",
@@ -459,8 +547,24 @@
     "        flow[:, :, 0:2] = (flow[:, :, 0:2] - 2 ** 15) / 64.0\n",
     "        flow[invalid_idx, 0] = 0\n",
     "        flow[invalid_idx, 1] = 0\n",
-    "        return flow[:, :, :2]\n",
-    "\n",
+    "        return flow[:, :, :2]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from cheap_optical_flow_eval_analysis.kittisf15 import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def kitti_sf15_create_fp(info):\n",
     "     return OpticalFlowPair(\n",
     "                dataset=\"KITTI Scene Flow 2015\",\n",
@@ -479,7 +583,7 @@
     "if RUN_FULL_ANALYSIS:\n",
     "    for scene in KITTI_SF15_ALL_SCENES:\n",
     "        p = kitti_sf15_create_fp(scene)\n",
-    "        ALL_FPS.append(p)\n"
+    "        ALL_FPS.append(p)"
    ]
   },
   {
@@ -546,27 +650,39 @@
     "    \n",
     "    return out, valid_mask.astype(np.bool)\n",
     "\n",
-    "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
+    "# @attr.s(slots=True, eq=False, weakref_slot=False)\n",
     "class FlowReconstructedImagePair(object):\n",
     "    \"\"\"A pair of reconstructed images using an input pair of images and optical\n",
     "    flow field (i.e. an `OpticalFlowPair` instance).\"\"\"\n",
     "\n",
-    "    opair = attr.ib(default=OpticalFlowPair())\n",
-    "    \"\"\"The original `OpticalFlowPair` with the source of the data for this reconstruction result.\"\"\"\n",
+    "    slots = (\n",
+    "        'opair',\n",
+    "        'img2_recon_fwd',\n",
+    "        'img2_recon_fwd_valid',\n",
+    "        'img1_recon_bkd',\n",
+    "        'img1_recon_bkd_valid'\n",
+    "    )\n",
     "    \n",
-    "    img2_recon_fwd = attr.ib(default=np.array([]))\n",
-    "    \"\"\"A Numpy image containing the result of FORWARDS-WARPING OpticalFlowPair::img1\n",
-    "    via OpticalFlowPair::flow to reconstruct OpticalFlowPair::img2\"\"\"\n",
-    "\n",
-    "    img2_recon_fwd_valid = attr.ib(default=np.array([]))\n",
-    "    \"\"\"A Numpy boolean mask indicating which pixels of `img2_recon_fwd` were modified via non-zero flow\"\"\"\n",
+    "    def __init__(self, **kwargs):\n",
+    "        for k in self.slots:\n",
+    "            setattr(self, k, kwargs.get(k))\n",
     "    \n",
-    "    img1_recon_bkd = attr.ib(default=np.array([]))\n",
-    "    \"\"\"A Numpy image containing the result of BACKWARDS-WARPING OpticalFlowPair::img2\n",
-    "    via OpticalFlowPair::flow to reconstruct OpticalFlowPair::img1\"\"\"\n",
+    "#     opair = attr.ib(default=OpticalFlowPair())\n",
+    "#     \"\"\"The original `OpticalFlowPair` with the source of the data for this reconstruction result.\"\"\"\n",
+    "    \n",
+    "#     img2_recon_fwd = attr.ib(default=np.array([]))\n",
+    "#     \"\"\"A Numpy image containing the result of FORWARDS-WARPING OpticalFlowPair::img1\n",
+    "#     via OpticalFlowPair::flow to reconstruct OpticalFlowPair::img2\"\"\"\n",
     "\n",
-    "    img1_recon_bkd_valid = attr.ib(default=np.array([]))\n",
-    "    \"\"\"A Numpy boolean mask indicating which pixels of `img1_recon_bkd` were modified via non-zero flow\"\"\"\n",
+    "#     img2_recon_fwd_valid = attr.ib(default=np.array([]))\n",
+    "#     \"\"\"A Numpy boolean mask indicating which pixels of `img2_recon_fwd` were modified via non-zero flow\"\"\"\n",
+    "    \n",
+    "#     img1_recon_bkd = attr.ib(default=np.array([]))\n",
+    "#     \"\"\"A Numpy image containing the result of BACKWARDS-WARPING OpticalFlowPair::img2\n",
+    "#     via OpticalFlowPair::flow to reconstruct OpticalFlowPair::img1\"\"\"\n",
+    "\n",
+    "#     img1_recon_bkd_valid = attr.ib(default=np.array([]))\n",
+    "#     \"\"\"A Numpy boolean mask indicating which pixels of `img1_recon_bkd` were modified via non-zero flow\"\"\"\n",
     "        \n",
     "    @classmethod\n",
     "    def create_from(cls, oflow_pair: OpticalFlowPair):\n",
@@ -748,18 +864,28 @@
     "        \n",
     "        return html\n",
     "            \n",
-    "@attr.s(slots=True, eq=False, weakref_slot=False)\n",
+    "# @attr.s(slots=True, eq=False, weakref_slot=False)\n",
     "class OFlowStats(object):\n",
     "    \"\"\"Stats on the optical flow of a `OpticalFlowPair` instance\"\"\"\n",
     "\n",
-    "    opair = attr.ib(default=OpticalFlowPair())\n",
-    "    \"\"\"The original `OpticalFlowPair` with the source of the data for this reconstruction result.\"\"\"\n",
+    "    slots = (\n",
+    "        'opair',\n",
+    "        'coverage',\n",
+    "        'magnitude_hist',\n",
+    "    )\n",
     "    \n",
-    "    coverage = attr.ib(default=0)\n",
-    "    \"\"\"Fraction of the image with valid flow\"\"\"\n",
+    "    def __init__(self, **kwargs):\n",
+    "        for k in self.slots:\n",
+    "            setattr(self, k, kwargs.get(k))\n",
     "    \n",
-    "    magnitude_hist = attr.ib(default=[np.array([]), np.array([])])\n",
-    "    \"\"\"Histogram [bin edges, bin counts] of flow magnitudes\"\"\"\n",
+    "#     opair = attr.ib(default=OpticalFlowPair())\n",
+    "#     \"\"\"The original `OpticalFlowPair` with the source of the data for this reconstruction result.\"\"\"\n",
+    "    \n",
+    "#     coverage = attr.ib(default=0)\n",
+    "#     \"\"\"Fraction of the image with valid flow\"\"\"\n",
+    "    \n",
+    "#     magnitude_hist = attr.ib(default=[np.array([]), np.array([])])\n",
+    "#     \"\"\"Histogram [bin edges, bin counts] of flow magnitudes\"\"\"\n",
     "    \n",
     "    @classmethod\n",
     "    def create_from(cls, oflow_pair: OpticalFlowPair):\n",
@@ -846,12 +972,15 @@
     "sys.path.append('/opt/psegs')\n",
     "\n",
     "from oarphpy import plotting as pl\n",
-    "from psegs.spark import Spark\n",
+    "from oarphpy.spark import NBSpark\n",
+    "NBSpark.SRC_ROOT = os.path.join(ALIB_SRC_DIR, 'cheap_optical_flow_eval_analysis')\n",
+    "spark = NBSpark.getOrCreate()\n",
+    "\n",
+    "\n",
     "from oarphpy.spark import RowAdapter\n",
     "\n",
     "from pyspark import Row\n",
-    "!pip3 install cloudpickle\n",
-    "import cloudpickle\n",
+    "\n",
     "\n",
     "# class PlotterWithMicroFacet(pl.HistogramWithExamplesPlotter):\n",
     "#   NUM_BINS = 25\n",
@@ -877,33 +1006,36 @@
     "    fstats = OFlowStats.create_from(fp)\n",
     "    errors = OFlowReconErrors(recon)\n",
     "    \n",
-    "    kwargs = {}\n",
-    "    kwargs.update(\n",
-    "        ('Forward ' + k, v)\n",
+    "    rowdata = dict(\n",
+    "            fp=fp_lite,\n",
+    "            flow_coverage=fstats.coverage,\n",
+    "    )\n",
+    "    rowdata.update(\n",
+    "        ('Forward ' + k, float(v))\n",
     "        for k, v in errors.forward_stats.items())\n",
-    "    kwargs.update(\n",
-    "        ('Backwards ' + k, v)\n",
-    "        for k, v in errors.backwards_stats.items())\n",
-    "    return Row(\n",
-    "             fp=fp_lite,\n",
-    "             flow_coverage=recon.coverage,\n",
-    "             **kwargs)\n",
+    "    rowdata.update(\n",
+    "        ('Backwards ' + k, float(v))\n",
+    "        for k, v in errors.backward_stats.items())\n",
+    "    return RowAdapter.to_row(rowdata)\n",
     "  \n",
     "if RUN_FULL_ANALYSIS:\n",
-    "    spark = Spark.getOrCreate()\n",
+    "#     spark = Spark.getOrCreate()\n",
     "    \n",
-    "    for p in ALL_FPS:\n",
-    "        import pickle\n",
-    "        try:\n",
-    "            pickle.dumps(p)\n",
-    "        except Exception:\n",
-    "            assert False, p\n",
-    "    print('all good')\n",
+    "#     for p in ALL_FPS:\n",
+    "#         import cloudpickle\n",
+    "#         try:\n",
+    "#             cloudpickle.dumps(p)\n",
+    "#         except Exception:\n",
+    "#             assert False, p\n",
+    "#     print('all good')\n",
     "    \n",
-    "    fp_rdd = spark.sparkContext.parallelize([p for p in ALL_FPS])\n",
-    "    df = spark.createDataFrame(fp_rdd.map(flow_pair_to_full_row))\n",
+    "    import pickle\n",
+    "    fp_rdd = spark.sparkContext.parallelize(ALL_FPS[:200], numSlices=100)\n",
+    "    print(fp_rdd.count())\n",
+    "    df = spark.createDataFrame(fp_rdd.map(flow_pair_to_full_row)).persist()\n",
     "\n",
-    "df.show()"
+    "    print(df.count())\n",
+    "    df.show()"
    ]
   },
   {
