--- a/notebooks/semantickitti_to_sd_table.ipynb
+++ b/notebooks/semantickitti_to_sd_table.ipynb
@@ -432,16 +432,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-02-11 08:35:33,812\toarph 4020 : Using source root /opt/psegs/psegs \n",
-      "INFO - 2021-02-11 08:35:33,812 - spark - Using source root /opt/psegs/psegs \n",
-      "2021-02-11 08:35:33,813\toarph 4020 : Using source root /opt/psegs \n",
-      "INFO - 2021-02-11 08:35:33,813 - spark - Using source root /opt/psegs \n",
-      "2021-02-11 08:35:33,857\toarph 4020 : Generating egg to /tmp/tmpvf65_rul_oarphpy_eggbuild ...\n",
-      "INFO - 2021-02-11 08:35:33,857 - spark - Generating egg to /tmp/tmpvf65_rul_oarphpy_eggbuild ...\n",
-      "INFO - 2021-02-11 08:35:33,874 - driver - Generating grammar tables from /usr/lib/python3.6/lib2to3/Grammar.txt\n",
-      "INFO - 2021-02-11 08:35:33,891 - driver - Generating grammar tables from /usr/lib/python3.6/lib2to3/PatternGrammar.txt\n",
-      "2021-02-11 08:35:33,958\toarph 4020 : ... done.  Egg at /tmp/tmpvf65_rul_oarphpy_eggbuild/psegs-0.0.0-py3.6.egg\n",
-      "INFO - 2021-02-11 08:35:33,958 - spark - ... done.  Egg at /tmp/tmpvf65_rul_oarphpy_eggbuild/psegs-0.0.0-py3.6.egg\n"
+      "2021-02-11 09:51:40,514\toarph 17241 : Using source root /opt/psegs/psegs \n",
+      "INFO - 2021-02-11 09:51:40,514 - spark - Using source root /opt/psegs/psegs \n",
+      "2021-02-11 09:51:40,516\toarph 17241 : Using source root /opt/psegs \n",
+      "INFO - 2021-02-11 09:51:40,516 - spark - Using source root /opt/psegs \n",
+      "2021-02-11 09:51:40,555\toarph 17241 : Generating egg to /tmp/tmpngjmscf__oarphpy_eggbuild ...\n",
+      "INFO - 2021-02-11 09:51:40,555 - spark - Generating egg to /tmp/tmpngjmscf__oarphpy_eggbuild ...\n",
+      "INFO - 2021-02-11 09:51:40,571 - driver - Generating grammar tables from /usr/lib/python3.8/lib2to3/Grammar.txt\n",
+      "INFO - 2021-02-11 09:51:40,626 - driver - Generating grammar tables from /usr/lib/python3.8/lib2to3/PatternGrammar.txt\n",
+      "2021-02-11 09:51:40,706\toarph 17241 : ... done.  Egg at /tmp/tmpngjmscf__oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n",
+      "INFO - 2021-02-11 09:51:40,706 - spark - ... done.  Egg at /tmp/tmpngjmscf__oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n",
+      "INFO - 2021-02-11 09:51:43,209 - kernelextension - Client Connected ('127.0.0.1', 56946)\n"
      ]
     }
    ],
@@ -452,9 +453,8 @@
     "NBSpark.CONF_KV.update({\n",
     "    'spark.driver.maxResultSize': '10g',\n",
     "    'spark.driver.memory': '16g',\n",
-    "    'spark.driverEnv.PYTHONPATH': '/opt/psegs',\n",
     "  })\n",
-    "NBSpark.CONF_KV.pop('spark.extraListeners')\n",
+    "# NBSpark.CONF_KV.pop('spark.extraListeners')\n",
     "spark = NBSpark.getOrCreate()"
    ]
   },
@@ -835,9 +835,8 @@
     "    moving_mask = get_moving_mask_for_scan(scene_base, scan_id)\n",
     "    return moving_mask.any()\n",
     "\n",
-    "def read_scan_get_world_cloud(seq, scan_id, remove_movers=True, filter_ego=True):\n",
+    "def read_scan_get_cloud(seq, scan_id, remove_movers=True, filter_ego=True):\n",
     "    scan_name = str(scan_id).rjust(6, '0')\n",
-    "    seq = base_uri.segment_id\n",
     "    scene_base = get_scene_basepath(seq)\n",
     "    scan_path = os.path.join(scene_base, 'velodyne', scan_name + '.bin')\n",
     "\n",
@@ -849,7 +848,7 @@
     "    if remove_movers:\n",
     "        # Clean out points for anything moving\n",
     "        moving_mask = get_moving_mask_for_scan(scene_base, scan_id)\n",
-    "        cloud = cloud[~moving_mask][:, :3]\n",
+    "        cloud = cloud[~moving_mask]#[:, :3]\n",
     "    \n",
     "    if filter_ego:\n",
     "        pass # TODO ~ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
@@ -914,7 +913,7 @@
     "            datum_rdds.append(datum_rdd)\n",
     "            \n",
     "            # Emit velodyne cloud RDD\n",
-    "            pctask_rdd = spark.sparkContext.parallelize(tasks)\n",
+    "            pctask_rdd = spark.sparkContext.parallelize(tasks[:100])\n",
     "            datum_rdd = pctask_rdd.map(lambda t: cls.create_point_cloud_in_world(*t))\n",
     "            datum_rdds.append(datum_rdd)\n",
     "#             # Emit world cloud once\n",
@@ -1006,16 +1005,18 @@
     "        sd_ego_pose = cls.create_ego_pose(base_uri, scan_id)\n",
     "        ego_pose = sd_ego_pose.transform\n",
     "        \n",
-    "        def _get_cloud(base_uri, scan_id):\n",
-    "            cloud = read_scan_get_world_cloud(\n",
-    "                        base_uri.segment_id,\n",
-    "                        scan_id,\n",
+    "        def _get_cloud(seq, sid):\n",
+    "            cloud = read_scan_get_cloud(\n",
+    "                        seq,\n",
+    "                        sid,\n",
     "                        remove_movers=cls.ONLY_FRAMES_WITH_NO_MOVERS)\n",
     "            \n",
     "            # Move cloud into the world frame\n",
-    "            Tr = self.calib[\"Tr\"]\n",
+    "            calib = cls._get_calib(seq)\n",
+    "            all_poses = cls._get_poses(seq)\n",
+    "            Tr = calib[\"Tr\"]\n",
     "            Tr_inv = np.linalg.inv(Tr)\n",
-    "            cam2_pose = self.all_poses[scan_id]\n",
+    "            cam2_pose = all_poses[sid]\n",
     "            pose = np.matmul(Tr_inv, np.matmul(cam2_pose, Tr))\n",
     "            cloud = np.matmul(pose, cloud.T).T\n",
     "            \n",
@@ -1024,7 +1025,7 @@
     "        pc = datum.PointCloud(\n",
     "          sensor_name=uri.topic,\n",
     "          timestamp=uri.timestamp,\n",
-    "          cloud_factory=lambda: _get_cloud(base_uri, scan_id),\n",
+    "          cloud_factory=lambda: _get_cloud(base_uri.segment_id, scan_id),\n",
     "          ego_to_sensor=datum.Transform(), # Hack! cloud is in world frame\n",
     "          ego_pose=ego_pose,\n",
     "          extra={'semantic_kitti.scan_id': str(scan_id)})\n",
@@ -1039,17 +1040,33 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-2649ef767ec8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mseg_uris\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSemanticKITTIFusedWorldCloudTable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_all_segment_uris\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0msd_rdd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSemanticKITTIFusedWorldCloudTable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_get_segment_datum_rdd_or_df\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mspark\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseg_uris\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msd_rdd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-02-11 09:51:44,067\tps   17241 : Filtering to only 1 segments\n",
+      "INFO - 2021-02-11 09:51:44,067 - fused_lidar - Filtering to only 1 segments\n",
+      "2021-02-11 09:51:44,068\tps   17241 : SemanticKITTIFusedWorldCloudTable building fused world clouds ...\n",
+      "INFO - 2021-02-11 09:51:44,068 - fused_lidar - SemanticKITTIFusedWorldCloudTable building fused world clouds ...\n",
+      "2021-02-11 09:51:44,069\tps   17241 : ... have 1 segments to fuse ...\n",
+      "INFO - 2021-02-11 09:51:44,069 - fused_lidar - ... have 1 segments to fuse ...\n",
+      "2021-02-11 09:51:44,070\tps   17241 : ... working on 00 ...\n",
+      "INFO - 2021-02-11 09:51:44,070 - fused_lidar - ... working on 00 ...\n",
+      "2021-02-11 09:51:44,071\tps   17241 : ... have fused cloud; skipping! /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/semantikitti-psegs-fused/train/00/fused_world.ply\n",
+      "INFO - 2021-02-11 09:51:44,071 - fused_lidar - ... have fused cloud; skipping! /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/semantikitti-psegs-fused/train/00/fused_world.ply\n",
+      "2021-02-11 09:51:44,072\tps   17241 : ... SemanticKITTIFusedWorldCloudTable done fusing clouds.\n",
+      "INFO - 2021-02-11 09:51:44,072 - fused_lidar - ... SemanticKITTIFusedWorldCloudTable done fusing clouds.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
      ]
     }
    ],
@@ -1060,25 +1077,24 @@
     "    SRC_SD_TABLE = SemanticKITTISDTable\n",
     "    \n",
     "    @classmethod\n",
-    "    def _get_task_lidar_cuboid_df(cls, spark, segment_uri):\n",
+    "    def _get_task_lidar_cuboid_rdd(cls, spark, segment_uri):\n",
     "        seg_rdd = cls.SRC_SD_TABLE.get_segment_datum_rdd(spark, segment_uri)\n",
     "        \n",
     "        # SemanticKITTI has no cuboids, so the Fuser algo simply concats the cloud points\n",
     "        def iter_task_rows(iter_sds):\n",
     "            from pyspark import Row\n",
+    "            from oarphpy.spark import RowAdapter\n",
     "            for sd in iter_sds:\n",
     "                if sd.point_cloud is not None:\n",
+    "                    pc = sd.point_cloud\n",
     "                    task_id = \"%s.%s\" % (sd.uri.segment_id, pc.extra['semantic_kitti.scan_id'])\n",
-    "                    r = Row(\n",
+    "                    yield Row(\n",
     "                        task_id=task_id,\n",
-    "                        point_clouds=[sd.point_cloud],\n",
+    "                        point_clouds=[pc],\n",
     "                        cuboids=[])\n",
-    "                    yield cls.SRC_SD_TABLE.to_row(r)\n",
     "        \n",
     "        task_rdd = seg_rdd.mapPartitions(iter_task_rows)\n",
-    "        task_df = spark.createDataFrame(task_rdd)\n",
-    "        task_df = task_df.persist()\n",
-    "        return task_df\n",
+    "        return task_rdd\n",
     "        \n",
     "seg_uris = SemanticKITTIFusedWorldCloudTable.get_all_segment_uris()\n",
     "sd_rdd = SemanticKITTIFusedWorldCloudTable._get_segment_datum_rdd_or_df(spark, seg_uris[0])\n",
@@ -1116,7 +1132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
