--- a/notebooks/semantickitti_to_sd_table.ipynb
+++ b/notebooks/semantickitti_to_sd_table.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# SemanticKITTI to Stamped Datum Table"
+    "# SemanticKITTI to Stamped Datum Table\n",
+    "\n",
+    "CAN DELETE THIS NOTEBOOK\n"
    ]
   },
   {
