--- a/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
+++ b/notebooks/cheap_optical_flow_from_fused_lidar.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,6 @@
     "          WHERE \n",
     "              uri.topic LIKE '%cuboid%' OR uri.topic LIKE '%lidar%'\n",
     "          GROUP BY task_id\n",
-    "          LIMIT 100\n",
     "        \"\"\")\n",
     "        tasks_df = spark.sql('SELECT * FROM culi_tasks_df')\n",
     "        print('... done.')\n",
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -139,8 +138,8 @@
    "source": [
     "# !pip3 install nuscenes-devkit==1.1.2\n",
     "from psegs.datasets.nuscenes import NuscStampedDatumTableBase, NuscStampedDatumTableLabelsAllFrames\n",
-    "class NuscFusedWorldCloudTable(FusedLidarCloudTableBase):\n",
-    "    SRC_SD_TABLE = NuscStampedDatumTableBase\n",
+    "class NuscFusedWorldCloudTableBase(FusedLidarCloudTableBase):\n",
+    "    #SRC_SD_TABLE = NuscStampedDatumTableBase\n",
     "    \n",
     "    SPLITS = ['train_detect', 'train_track']\n",
     "    \n",
@@ -201,7 +200,14 @@
     "        \n",
     "        tasks_df = spark.sql('SELECT * FROM culi_tasks_df')\n",
     "        print('... done.')\n",
-    "        return tasks_df.rdd\n"
+    "        return tasks_df.rdd\n",
+    "\n",
+    "class NuscFusedWorldCloudKeyframesOnlyTable(NuscFusedWorldCloudTableBase):\n",
+    "    SRC_SD_TABLE = NuscStampedDatumTableBase\n",
+    "\n",
+    "class NuscFusedWorldCloudAllFramesTable(NuscFusedWorldCloudTableBase):\n",
+    "    SRC_SD_TABLE = NuscStampedDatumTableLabelsAllFrames\n",
+    "    "
    ]
   },
   {
@@ -213,20 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-13 21:38:42,885\toarph 726314 : Using source root /opt/psegs/psegs \n",
-      "2021-02-13 21:38:42,886\toarph 726314 : Using source root /opt/psegs \n",
-      "2021-02-13 21:38:42,930\toarph 726314 : Generating egg to /tmp/tmpr_ovivrq_oarphpy_eggbuild ...\n",
-      "2021-02-13 21:38:43,010\toarph 726314 : ... done.  Egg at /tmp/tmpr_ovivrq_oarphpy_eggbuild/psegs-0.0.0-py3.8.egg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from psegs.spark import NBSpark\n",
     "spark = NBSpark.getOrCreate()"
@@ -247,118 +242,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-13 21:38:46,162\tps   726314 : Filtering to only 1 segments\n",
-      "2021-02-13 21:38:46,163\tps   726314 : NuscFusedWorldCloudTable building fused clouds ...\n",
-      "2021-02-13 21:38:46,164\tps   726314 : ... have 1 segments to fuse ...\n",
-      "2021-02-13 21:38:46,164\tps   726314 : ... working on scene-0464 ...\n",
-      "2021-02-13 21:38:47,229\tps   726314 : Filtering to only 1 segments\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Building tasks table for scene-0464 ...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-13 21:39:06,065\tps   726314 : Building world cloud to /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/nuscenes-Lkfo+lseg/train_detect/scene-0464/fused_world.ply ...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "... done.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-02-13 21:39:06,977\tps   726314 : ... have 41 fusion tasks ...\n",
-      "2021-02-13 21:41:04,179\tps   726314 : ... computed world cloud for scene-0464 of shape (796491, 3) (0.02 GB) ...\n",
-      "2021-02-13 21:41:04,180\tps   726314 : ... writing ply to /opt/psegs/dataroot/fused_world_clouds/naive_cuboid_scrubber/nuscenes-Lkfo+lseg/train_detect/scene-0464/fused_world.ply ...\n",
-      "2021-02-13 21:41:05,068\tps   726314 : ... done writing ply.\n",
-      "INFO - 2021-02-13 21:41:05,068 - fused_lidar - ... done writing ply.\n",
-      "2021-02-13 21:41:05,075\toarph 726314 : \n",
-      "ComputeWorldClouds [Pid:726314 Id:140426301035712]\n",
-      "-----------------------  --------------------------------------------------------------------\n",
-      "Thruput\n",
-      "N thru                   41 (of 41)\n",
-      "N chunks                 42\n",
-      "Total time               1 minute and 58.07 seconds\n",
-      "Total thru               19.12 MB\n",
-      "Rate                     161.9 KB / sec\n",
-      "Hz                       0\n",
-      "Progress\n",
-      "Percent Complete         100.000000\n",
-      "Est. Time To Completion  0 seconds\n",
-      "Latency (per chunk)\n",
-      "Avg                      2 seconds, 811 milliseconds, 304 microseconds and 983.64 nanoseconds\n",
-      "p50                      2 seconds, 217 milliseconds, 489 microseconds and 600.18 nanoseconds\n",
-      "p95                      9 seconds, 134 milliseconds, 800 microseconds and 517.56 nanoseconds\n",
-      "p99                      12 seconds, 875 milliseconds, 499 microseconds and 43.46 nanoseconds\n",
-      "-----------------------  --------------------------------------------------------------------\n",
-      "\n",
-      "INFO - 2021-02-13 21:41:05,075 - thruput_observer - \n",
-      "ComputeWorldClouds [Pid:726314 Id:140426301035712]\n",
-      "-----------------------  --------------------------------------------------------------------\n",
-      "Thruput\n",
-      "N thru                   41 (of 41)\n",
-      "N chunks                 42\n",
-      "Total time               1 minute and 58.07 seconds\n",
-      "Total thru               19.12 MB\n",
-      "Rate                     161.9 KB / sec\n",
-      "Hz                       0\n",
-      "Progress\n",
-      "Percent Complete         100.000000\n",
-      "Est. Time To Completion  0 seconds\n",
-      "Latency (per chunk)\n",
-      "Avg                      2 seconds, 811 milliseconds, 304 microseconds and 983.64 nanoseconds\n",
-      "p50                      2 seconds, 217 milliseconds, 489 microseconds and 600.18 nanoseconds\n",
-      "p95                      9 seconds, 134 milliseconds, 800 microseconds and 517.56 nanoseconds\n",
-      "p99                      12 seconds, 875 milliseconds, 499 microseconds and 43.46 nanoseconds\n",
-      "-----------------------  --------------------------------------------------------------------\n",
-      "\n",
-      "2021-02-13 21:41:05,076\tps   726314 : Pruning object clouds ...\n",
-      "INFO - 2021-02-13 21:41:05,076 - fused_lidar - Pruning object clouds ...\n",
-      "2021-02-13 21:42:09,871\tps   726314 : ... have 1255 clouds of 38 objects to fuse ...\n",
-      "INFO - 2021-02-13 21:42:09,871 - fused_lidar - ... have 1255 clouds of 38 objects to fuse ...\n",
-      "2021-02-13 21:42:09,872\tps   726314 : ... doing fusion, saving to /opt/psegs/dataroot/fused_obj_clouds/naive_cuboid_scrubber/nuscenes-Lkfo+lseg/train_detect/scene-0464 ...\n",
-      "INFO - 2021-02-13 21:42:09,872 - fused_lidar - ... doing fusion, saving to /opt/psegs/dataroot/fused_obj_clouds/naive_cuboid_scrubber/nuscenes-Lkfo+lseg/train_detect/scene-0464 ...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "T = NuscFusedWorldCloudTable\n",
+    "T = KITTI360OurFusedWorldCloudTable\n",
+    "rdds = T._create_datum_rdds(spark)\n",
+    "print([r.count() for r in rdds])\n",
+    "\n",
     "seg_uris = T.get_all_segment_uris()\n",
-    "samp = T.get_sample(seg_uris[10], spark=spark)\n"
+    "samp = T.get_sample(seg_uris[0], spark=spark)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [],
    "source": [
     "print([lc.sensor_name for lc in samp.lidar_clouds][:10])\n",
     "c = samp.lidar_clouds[0]#[lc for lc in samp.lidar_clouds if lc.sensor_name == '11002'][0]\n",
     "print(c.get_cloud().shape)\n",
-    "imshow(c.get_bev_debug_image())\n",
-    "imshow(c.get_front_rv_debug_image())"
+    "imshow(c.get_bev_debug_image(x_bounds_meters=None, y_bounds_meters=None))\n",
+    "imshow(c.get_front_rv_debug_image(y_bounds_meters=None, z_bounds_meters=None))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute Candidate Optical Flow Pairs"
    ]
   },
   {
@@ -373,7 +288,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Render Optical Flow"
+   ]
   },
   {
    "cell_type": "code",
